update comment Controller MT_Data
